# mcp-starter

./: .env.example  .gitignore  CASE-STUDY.md  CHANGELOG.md  README.md  obsidian_mcp.py  pyproject.toml  requirements.txt  system_prompt.md  vault_file_search.py  vault_security.py
skills/_shared/: guards.py
skills/vault-dispatch/: main.py
skills/vault-find/: main.py
skills/vault-graph/: main.py
src/mcp_starter/: __init__.py  cli.py  config.py  server.py  skill_registry.py  vault_file_search.py  vault_layout.py
tests/: test_fixes.py  test_http.py  test_p0.py  test_schema_validation.py
