[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvault"
version = "1.16.0"
description = "A bounded, deterministic MCP runtime for Obsidian and Markdown knowledge bases"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Jorge MM Marques" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "obsidian",
  "markdown",
  "knowledge-base",
  "agent-runtime",
  "llm",
  "agents",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "starlette>=0.37",
  "uvicorn>=0.29",
  "sse-starlette>=2.0",
  "pyjwt>=2.8",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "httpx>=0.27",
]

[project.scripts]
agentvault = "mcp_starter.cli:main"

[project.urls]
Homepage = "https://github.com/MaiorMajor/agentvault"
Repository = "https://github.com/MaiorMajor/agentvault"
Documentation = "https://github.com/MaiorMajor/agentvault#readme"
Changelog = "https://github.com/MaiorMajor/agentvault/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"skills/**" = ["I001"]